build/log/idf_py_stderr_output_36869
Command: make -j 14 flash
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:26:
/home/umesh_adwait/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c: In function 'adc_timer_callback':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:48:33: error: expected expression before ')' token
   48 |          ets_delay_us(PERIOD_OFF);
      |                                 ^
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:167: esp-idf/main/CMakeFiles/__idf_main.dir/dvr/interr_event.c.obj] Error 1
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/Makefile2:6398: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2745: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:216: flash] Error 2
